--- a/chocolate.html
+++ b/chocolate.html
@@ -23,7 +23,7 @@
                 <li>Ghana</li>
             </ul>
             
-            <img src="">
+            <img src="img/chocolate.jpg">
 
             <a href="index.html"><button type="button">Back</button></a>
 
